# oz_01_collabo-003

./: README.md  package-lock.json  package.json
backend/: .gitignore  README.md  pyproject.toml
backend/config/: base.py  prod.py  settings.py  urls.py
backend/feedbacks/: models.py  serializers.py  urls.py  views.py
backend/feedbacks/migrations/: 0001_initial.py  0002_initial.py
backend/gpt/: gptmanage.py  gptmanages.py  manager.py  models.py  serializers.py  urls.py  views.py
backend/gpt/management/commands/: closepoll.py  get_questions.py
backend/gpt/migrations/: 0001_initial.py  0002_gpttoeic.py  0002_remove_gptquestionanswer_ordernum.py  0003_gptelementary_level_gpthigh_level_gptmiddle_level_and_more.py
backend/graph/: urls.py  views.py
backend/print/: urls.py  views.py
backend/quizlevels/: apps.py  models.py  serializers.py  urls.py  views.py
backend/quizlevels/migrations/: 0001_initial.py  0002_initial.py
backend/quizs/: apps.py  models.py  serializers.py  urls.py  views.py
backend/quizs/migrations/: 0001_initial.py  0002_initial.py  0003_quiz_gptanswer.py
backend/static/: complete.css  styles.css
backend/templates/: password_reset_complete.html  password_reset_confirm.html
backend/users/: models.py  serializers.py  tests.py  urls.py  views.py
backend/users/management/commands/: delete_inactive_users.py
backend/users/migrations/: 0001_initial.py  0002_rename_userid_user_nickname.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/public/: _redirects
(+60 files in other folders)
